refactor(core & user_center): 移除 CorsConfig 类，统一通过配置文件管理跨域(CORS)设置