@@ -21,8 +21,12 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.nio.charset.StandardCharsets;
-import java.util.List;
+import java.util.Arrays;
 
+/**
+ * Spring Security 配置
+ * 包含认证、授权、CORS等安全配置
+ */
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity
@@ -37,20 +41,43 @@ public class SecurityConfig {
     @Value("${app.auth.token-key-prefix:token:}")
     private String tokenKeyPrefix;
 
-    @Value("${app.auth.ignored-urls:/z_login/login,/doc.html,/swagger-ui/**,/swagger-ui.html,/v3/api-docs/**,/v3/api-docs.json,/webjars/**,/favicon.ico,/captcha/**}")
+    @Value("${app.auth.ignored-urls}")
     private String[] ignoredUrls;
+
+    @Value("${app.cors.allowed-origins:*}")
+    private String[] allowedOrigins;
+
+    @Value("${app.cors.allowed-methods:GET,POST,PUT,DELETE,OPTIONS}")
+    private String[] allowedMethods;
+
+    @Value("${app.cors.allowed-headers:*}")
+    private String[] allowedHeaders;
+
+    @Value("${app.cors.allow-credentials:true}")
+    private boolean allowCredentials;
+
+    @Value("${app.cors.max-age:3600}")
+    private long maxAge;
 
     /**
      * CORS 配置源
+     * 从配置文件读取跨域设置
      */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOriginPatterns(List.of("*"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
-        config.setAllowCredentials(true);
-        config.setMaxAge(3600L);
+
+        // 配置允许的源
+        if (allowedOrigins.length == 1 && "*".equals(allowedOrigins[0])) {
+            config.addAllowedOriginPattern("*");
+        } else {
+            config.setAllowedOrigins(Arrays.asList(allowedOrigins));
+        }
+
+        config.setAllowedMethods(Arrays.asList(allowedMethods));
+        config.setAllowedHeaders(Arrays.asList(allowedHeaders));
+        config.setAllowCredentials(allowCredentials);
+        config.setMaxAge(maxAge);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
@@ -61,18 +88,16 @@ public class SecurityConfig {
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         TokenAuthenticationFilter tokenFilter = new TokenAuthenticationFilter(loginService, tokenKeyPrefix);
 
-        http
-                // 启用 CORS(关键配置)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .csrf(AbstractHttpConfigurer::disable)
-                .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .exceptionHandling(ex -> ex.authenticationEntryPoint((req, resp, e) -> {
-                    resp.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
-                    resp.setCharacterEncoding(StandardCharsets.UTF_8.name());
-                    resp.setContentType(MediaType.APPLICATION_JSON_VALUE);
-                    resp.getWriter()
-                        .write("{\"success\":false,\"message\":\"未登录或token无效\"}");
-                }));
+        http.cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .csrf(AbstractHttpConfigurer::disable)
+            .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .exceptionHandling(ex -> ex.authenticationEntryPoint((req, resp, e) -> {
+                resp.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                resp.setCharacterEncoding(StandardCharsets.UTF_8.name());
+                resp.setContentType(MediaType.APPLICATION_JSON_VALUE);
+                resp.getWriter()
+                    .write("{\"success\":false,\"message\":\"未登录或token无效\"}");
+            }));
 
         if (authEnabled) {
             http.authorizeHttpRequests(auth -> auth.requestMatchers(ignoredUrls)
